package eu.telecomnancy.rpg;

public class Weapon {
    public String name;
    public int damage;

    public Weapon(String name, int damage) {
        this.name = name;
        this.damage = damage;
    }
}
